# workshop-robust-hyperparam-tuning

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: parameters.yml
data/01_raw/: fremotor1prem0304.parquet
notebooks/: 1.0-analyze-data.ipynb  1.0-download-data.ipynb  2.1-pydantic-explain.ipynb  2.2-pandera-explain.ipynb  3.1-bayesian-opt-explain.md  3.2-bayesian-opt-starter.ipynb  assignment.ipynb  bonus-assignment.ipynb
src/: __init__.py  download_data.py  train_utils.py
